--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 {%block title%}Home{%endblock%}
 
 {%block body%}
-    <div class="container">
+    <div class="container table-responsive">
         <table class="table">
             <thead>
                 <tr>
