--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,41 @@
 
 {%block body%}
     <div class="container">
-        <h3 class="text-center">Hello there! Welcome to Contact Manager.</h3>
+        <h3 class="text-center">Hello {%if current_user.is_authenticated%}{{current_user.name}}{%else%}there{%endif%}! Welcome to Contact Manager.</h3>
+        <div class="px-4 mt-5">
+            <div class="row gx-5 gy-5 d-flex justify-content-center">
+                {%if current_user.is_authenticated%}
+                <div class="col-lg-3">
+                    <div class="p-3 position-relative shadow rounded">
+                        <h4>Dashboard</h4><br>
+                        <p>Dashboard is the place where you can add, modify or delete your contacts.</p>
+                        <a href="{{url_for('dashboard')}}" class="stretched-link"></a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="p-3 position-relative shadow rounded">
+                        <h4>Logout</h4><br>
+                        <p>Click on this card to logout from your account!</p>
+                        <a href="{{url_for('logout')}}" class="stretched-link"></a>
+                    </div>
+                </div>
+                {%else%}
+                <div class="col-lg-3">
+                    <div class="p-3 position-relative shadow rounded">
+                        <h4>Login</h4><br>
+                        <p>Click on this card to login to your account!</p>
+                        <a href="{{url_for('login')}}" class="stretched-link"></a>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="p-3 position-relative shadow rounded">
+                        <h4>Signup</h4><br>
+                        <p>Click on this card to create a new user account!</p>
+                        <a href="{{url_for('signup')}}" class="stretched-link"></a>
+                    </div>
+                </div>
+                {%endif%}
+            </div>
+        </div>
     </div>
 {%endblock%}
