--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,10 +3,10 @@
 {%block title%}Signup{%endblock%}
 
 {%block body%}
-<div class="container">
+<div class="container px-4">
     <div class="row">
         <div class="col-lg-4"></div>
-        <div class="col-lg-4 border border-dark">
+        <div class="col-lg-4 shadow rounded">
             <form method="post" class="p-3">
                 <h3 class="text-center mb-3">Signup</h3>
                 <div class="form-floating mb-3">
