--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <div class="py-5">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
-            <div class="mb-3">
+            <div class="container-fluid mb-3">
                 <div class="row">
                     <div class="col-lg-4"></div>
                     <div class="col-lg-4">
