--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,7 @@
                     <input class="form-control" id="password" type="password" name="password" placeholder=".">
                     <label for="email">Password</label>
                 </div>
+                <p class="form-text">Don't have an account? <a href="{{url_for('signup')}}">Signup</a></p>
                 <div class="d-flex justify-content-center mb-3">
                     <button class="btn btn-dark" type="submit">Login</button>
                 </div>
