--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 
-{%block title%}Signup{%endblock%}
+{%block title%}Profile{%endblock%}
 
 {%block body%}
 <div class="container px-4">
